--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-
+# no .csv data files
 *.csv
+# ignore an output .mat file
+3D gridWalker.mat
+# ignore Library folder
+Library/
+# no temp Matlab files
+*.m~
